--- a/part1.html
+++ b/part1.html
@@ -7,7 +7,8 @@
 </head>
 <body>
 	<div class="header">
-		<img id="icon" src="img/icon.png"/>
+		<a href="https://www.youtube.com/watch?v=8ijop2gU_S4">
+			<img id="icon" src="img/icon.png"/></a>
 		<div class="header-content">
 			<span id="title">bubble soccer is awesome yo</span>
 			<div class="nav">
