--- a/part1_comments.html
+++ b/part1_comments.html
@@ -7,7 +7,8 @@
 </head>
 <body>
 	<div class="header">
-		<img id="icon" src="img/icon.png"/>
+		<a href="https://www.youtube.com/watch?v=8ijop2gU_S4">
+			<img id="icon" src="img/icon.png"/></a>
 		<div class="header-content">
 			<span id="title">bubble soccer is awesome yo</span>
 			<div class="nav">
@@ -21,16 +22,26 @@
 	</div>
 	<div class="content">
 		<div class="container">
-			<div class="container-header">Overview</div>
-			<div class="container-content">asljfwofeijwaoef awoeijf woiejfaosfjowefmfnxovchdsughw ewoeifhsoifsd fwoiefhsodi fjslfhoewi w we wle fsidfh soiflwke fnalwkndoihoihweh egfs dfj.sdfj sief oiewjf skjf askdfj we.</div>
+			<div class="container-header">Comment from: <em>Henry Fracksworth</em></div>
+			<div class="container-content">yo bubble soccer is so awesome yo; its my favorite passtime. i love bubble soccer!</div>
 		</div>
 		<div class="container">
-			<div class="container-header">Rules</div>
-			<div class="container-content">asljfwofeijwaoef awoeijf woiejfaosfjowefmfnxovchdsughw ewoeifhsoifsd fwoiefhsodi fjslfhoewi w we wle fsidfh soiflwke fnalwkndoihoihweh egfs dfj.sdfj sief oiewjf skjf askdfj we.</div>
+			<div class="container-header">Comment from: <em>Sally Frumperton</em></div>
+			<div class="container-content">this henry man be so on da ball! he got it right, man. i-an-i gonna play da bubba-soccer with me bros tonight, kno what-i-mean, man?</div>
 		</div>
 		<div class="container">
-			<div class="container-header">History</div>
-			<div class="container-content">asljfwofeijwaoef awoeijf woiejfaosfjowefmfnxovchdsughw ewoeifhsoifsd fwoiefhsodi fjslfhoewi w we wle fsidfh soiflwke fnalwkndoihoihweh egfs dfj.sdfj sief oiewjf skjf askdfj we.</div>
+			<div class="container-header">Post Comment</div>
+			<div class="container-content" id="comment-form">
+				<form>
+					<div id="comment-header">
+						Name: <input id="comment-name" type="text" name="name">
+						<br/>
+						Comment:
+					</div>
+					<textarea id="comment-text" name="text"></textarea>
+					<input id="comment-submit" type="submit">
+				</form>
+			</div>
 		</div>
 	</div>
 </body>
