--- a/part1_schedule.html
+++ b/part1_schedule.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 	<div class="header">
-		<img id="icon" src="img/icon.png"/>
+		<a href="https://www.youtube.com/watch?v=8ijop2gU_S4">
+			<img id="icon" src="img/icon.png"/></a>
 		<div class="header-content">
 			<span id="title">bubble soccer is awesome yo</span>
 			<div class="nav">
@@ -22,16 +23,171 @@
 	</div>
 	<div class="content">
 		<div class="container">
-			<div class="container-header">Overview</div>
-			<div class="container-content">asljfwofeijwaoef awoeijf woiejfaosfjowefmfnxovchdsughw ewoeifhsoifsd fwoiefhsodi fjslfhoewi w we wle fsidfh soiflwke fnalwkndoihoihweh egfs dfj.sdfj sief oiewjf skjf askdfj we.</div>
+			<div class="container-header">January 2015</div>
+			<div class="container-content">
+				<table>
+					<tr>
+						<th>Sunday</th>
+						<th>Monday</th>
+						<th>Tuesday</th>
+						<th>Wednesday</th>
+						<th>Thursday</th>
+						<th>Friday</th>
+						<th>Saturday</th>
+					</tr>
+					<tr>
+						<td>
+							<div class="calendar-date">28</div>
+							<div class="calendar-event"></div>
+						</td>
+						<td>
+							<div class="calendar-date">29</div>
+							<div class="calendar-event"></div>
+						</td>
+						<td>
+							<div class="calendar-date">30</div>
+							<div class="calendar-event"></div>
+						</td>
+						<td>
+							<div class="calendar-date">31</div>
+							<div class="calendar-event"></div>
+						</td>
+						<td>
+							<div class="calendar-date">01</div>
+							<div class="calendar-event"></div>
+						</td>
+						<td>
+							<div class="calendar-date">02</div>
+							<div class="calendar-event">something important happening</div>
+						</td>
+						<td>
+							<div class="calendar-date">03</div>
+							<div class="calendar-event"></div>
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<div class="calendar-date">04</div>
+							<div class="calendar-event"></div>
+						</td>
+						<td>
+							<div class="calendar-date">05</div>
+							<div class="calendar-event"></div>
+						</td>
+						<td>
+							<div class="calendar-date">06</div>
+							<div class="calendar-event"></div>
+						</td>
+						<td>
+							<div class="calendar-date">07</div>
+							<div class="calendar-event"></div>
+						</td>
+						<td>
+							<div class="calendar-date">08</div>
+							<div class="calendar-event"></div>
+						</td>
+						<td>
+							<div class="calendar-date">09</div>
+							<div class="calendar-event"></div>
+						</td>
+						<td>
+							<div class="calendar-date">10</div>
+							<div class="calendar-event"></div>
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<div class="calendar-date">11</div>
+							<div class="calendar-event"></div>
+						</td>
+						<td>
+							<div class="calendar-date">12</div>
+							<div class="calendar-event"></div>
+						</td>
+						<td>
+							<div class="calendar-date">13</div>
+							<div class="calendar-event"></div>
+						</td>
+						<td>
+							<div class="calendar-date">14</div>
+							<div class="calendar-event"></div>
+						</td>
+						<td>
+							<div class="calendar-date">15</div>
+							<div class="calendar-event"></div>
+						</td>
+						<td>
+							<div class="calendar-date">16</div>
+							<div class="calendar-event"></div>
+						</td>
+						<td>
+							<div class="calendar-date">17</div>
+							<div class="calendar-event"></div>
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<div class="calendar-date">18</div>
+							<div class="calendar-event"></div>
+						</td>
+						<td>
+							<div class="calendar-date">19</div>
+							<div class="calendar-event"></div>
+						</td>
+						<td>
+							<div class="calendar-date">20</div>
+							<div class="calendar-event"></div>
+						</td>
+						<td>
+							<div class="calendar-date">21</div>
+							<div class="calendar-event">big tournament</div>
+						</td>
+						<td>
+							<div class="calendar-date">22</div>
+							<div class="calendar-event"></div>
+						</td>
+						<td>
+							<div class="calendar-date">23</div>
+							<div class="calendar-event"></div>
+						</td>
+						<td>
+							<div class="calendar-date">24</div>
+							<div class="calendar-event"></div>
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<div class="calendar-date">25</div>
+							<div class="calendar-event"></div>
+						</td>
+						<td>
+							<div class="calendar-date">26</div>
+							<div class="calendar-event"></div>
+						</td>
+						<td>
+							<div class="calendar-date">27</div>
+							<div class="calendar-event"></div>
+						</td>
+						<td>
+							<div class="calendar-date">28</div>
+							<div class="calendar-event">new season</div>
+						</td>
+						<td>
+							<div class="calendar-date">29</div>
+							<div class="calendar-event"></div>
+						</td>
+						<td>
+							<div class="calendar-date">30</div>
+							<div class="calendar-event"></div>
+						</td>
+						<td>
+							<div class="calendar-date">31</div>
+							<div class="calendar-event"></div>
+						</td>
+					</tr>
+				</table>
+			</div>
 		</div>
-		<div class="container">
-			<div class="container-header">Rules</div>
-			<div class="container-content">asljfwofeijwaoef awoeijf woiejfaosfjowefmfnxovchdsughw ewoeifhsoifsd fwoiefhsodi fjslfhoewi w we wle fsidfh soiflwke fnalwkndoihoihweh egfs dfj.sdfj sief oiewjf skjf askdfj we.</div>
-		</div>
-		<div class="container">
-			<div class="container-header">History</div>
-			<div class="container-content">asljfwofeijwaoef awoeijf woiejfaosfjowefmfnxovchdsughw ewoeifhsoifsd fwoiefhsodi fjslfhoewi w we wle fsidfh soiflwke fnalwkndoihoihweh egfs dfj.sdfj sief oiewjf skjf askdfj we.</div>
 		</div>
 	</div>
 </body>
